<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearLayoutAuthorization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxAuthorize"
            style="@style/square_checkbox"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:buttonTint="@color/colorAccent"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/authorize_transaction"
            android:textColorHint="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/textViewInformationTitle"
            style="@style/form_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/authorizeInformation" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="350dp"
            android:layout_height="2dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/title_line_gradient" />

        <include
            android:id="@+id/includeFormAuthorization"
            layout="@layout/form_authorization" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutAuthorization">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFind"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@android:color/white"
            android:drawableStart="@drawable/baseline_search"
            android:hint="@string/find_transaction"
            android:paddingStart="15dp"
            android:textAlignment="textStart"
            android:textColorHint="@color/colorPrimaryDark" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@android:color/white"
            android:drawableStart="@drawable/baseline_list"
            android:hint="@string/get_transactions"
            android:paddingStart="15dp"
            android:textAlignment="textStart"
            android:textColorHint="@color/colorPrimaryDark" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>