<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearLayoutAuthorization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewInformationTitle"
            style="@style/form_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/all_transactions"
            android:gravity="center"/>

        <View
            android:id="@+id/viewLine"
            android:layout_width="400dp"
            android:layout_height="2dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/title_line_gradient" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSeparation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxAprobedTransaction"
        style="@style/square_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:buttonTint="@color/colorAccent"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/aprobed_transaction"
        android:padding="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toStartOf="@id/guidelineSeparation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutAuthorization" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBoxCancelTransaction"
        style="@style/square_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:buttonTint="@color/colorAccent"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/cancel_transaction"
        android:padding="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/guidelineSeparation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutAuthorization" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxAprobedTransaction"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <TextView
        android:id="@+id/textViewnothingTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/nothing_transactions"
        android:visibility="gone"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxAprobedTransaction" />

</androidx.constraintlayout.widget.ConstraintLayout>