<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearLayoutAuthorization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewInformationTitle"
            style="@style/form_title_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/find_transaction_by_id"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"/>

        <View
            android:id="@+id/viewLine"
            android:layout_width="400dp"
            android:layout_height="2dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/title_line_gradient" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextFilter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:drawableStart="@drawable/baseline_search"
        android:hint="@string/find_transaction"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutAuthorization"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextFilter" />

    <TextView
        android:id="@+id/textViewnothingTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/blue"
        android:gravity="center"
        android:padding="40dp"
        android:text="@string/nothing_transactions"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextFilter" />

</androidx.constraintlayout.widget.ConstraintLayout>